--- a/index.html
+++ b/index.html
@@ -1,1 +1,128 @@
-Hello Patricio!
+---
+layout: default
+title: AccelerateIBD
+---
+
+<!-- Header -->
+<header>
+    <div class="container">
+        <div class="row">
+            <p style="font-size: 25px; font-weight: bold">International Business Development</p>
+            <br/>
+            <br/>
+            <p> We accelerate the identification, the capture and building of a structured, scalable and manageable growth of your international potential and presence.</p>
+            <br/>
+            <br/>
+            <p> We guide the strategic consideration of why and how to best develop your international presence and the implementation of sustainable operating plans. We identify consumers in new export markets, across industry sectors.</p>
+            <br/>
+            <br/>
+            <p> We are retained and project based advisors to private equity and operating company executives. Our goal is to reduce the time and cost to generate profitable results and to enhance your enterprise value from expansion.</p>
+        </div
+    </div><!-- .container -->
+</header>
+
+<!-- Portfolio Grid Section -->
+<section id="services">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2>WHAT WE DO</h2>
+                <hr class="star-primary">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-6 col-md-6">
+                <h3>Scope</h3>
+                <p>Whether embarking on new overseas expansion, diversification, considering new markets or needing to restructure under-performing areas of an existing international presence, we bring expertise to reinforce your resources. We advise private equity and mentor groups from the early stages through to the restructuring of existing operations.<P>
+                <p>We guide leadership and focus your team on the fundamentals of extending your reach. We will diagnose gaps in competencies and capacity across your footprint to attain your objectives and capture growth potential.</p>
+                <p>Our aim is to assist you to move smartly within the resource allocations supported by your business and partners. We take a thorough look at the options. We look at your brand, service and product lines, the positioning, marketing and channels to understand how they need to be tailored for new markets.</p>
+                <p>We spot financial and other resource constraints and help you incorporate strategies and plans into the organization to address these.</p>
+                <p>We are accomplished in actionable market analysis, assessing market entry options, partner selection, contract agreements, establishing distribution channels, pricing and legal structures and creating support functions.<p>
+                <p>We will guide the transition to culturally adapted marketing programs and the development of an effective commercial approach.<P>
+                <p>We support strategy sessions, mentoring, market analysis and research, business plan development and active implementation across the organization.</p>
+                </div>
+            <div class="col-lg-6 col-md-6">
+                <h3>Outcomes</h3>
+                <p>We take the long term view of international expansion: to prioritize viable opportunities, finding and supporting global partners who respect the value of collaboration in representing your brand.<P>
+                <p>We accelerate the capture of incremental volumes, margins or strategic advantage.</p>
+                <p>We transfer competency to your organization to maintain vibrant international operations and sales.</p>
+                <p>The goal is to generate enhanced enterprise value in a way that makes international presence a compelling and integral part of your business.</p>
+            </div>
+        </div>
+        
+        <hr />
+
+       <!-- <div class="row">
+            <div class="col-lg-12 text-center">
+                <h3>Additional service</h3>
+                <p>We also promote the entry and growth of new enterprise into the US market. We can assist in optimizing your supply chain and presenting alternatives for overseas manufacturing and licensing.</p>
+            </div>
+        </div> -->
+    </div>
+</section>
+
+<!-- About Section -->
+<section class="success" id="about">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2>who we are</h2>
+                <hr class="star-primary">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-6">
+                <p class="text-center"><img class="img-rounded" alt="Tony Patterson" src="/img/Tony.png" /></p>
+                <h3 class="text-center">Tony Patterson</h3>
+                <p class="text-center"><a href="/TonyPatterson.vcf" class="text-muted"><small>Download vCard</small></a></p>
+                <p>Tony has held leading international executive positions and corporate advisory roles with both Fortune 500 groups and smaller corporations. This has been across all regions from Europe to Asia, building strategies and operations to enter and develop international markets. He combines the practical in-market operational experience with the demands of strategic and financial planning behind exceptional results.</p>
+
+                 <p>His leadership roles with companies such as Mitsubishi Corporation and Philip Morris International are complimented by the commercial smarts, discipline and flexibility needed in smaller businesses to operate internationally. This expertise has been used in industries spanning branded consumer goods, raw materials, transport and industrial equipment, new brand launches in mature markets to opening up consumers and customers in new markets.</p>
+
+                 <p>He has lead and built initiatives encompassing direct trading, sales and distribution structures, import and export initiatives, manufacturing and licensee operations, both own affiliate and with 3rd party government and private partners.</p>
+
+                 <p>Tony is a Fellow of the UK Institute of Directors and lives between the US and Europe. He graduated in Economics from London, grew up in England, Scotland, Malta, Cyprus, Gibraltar and Libya and has been based in Switzerland, Italy, Senegal, Ivory Coast, Nigeria, Egypt, Dubai, the USA and the UK.</p>
+
+                 <p><a class="btn btn-default" href="/tony.html">More about...</a></p>
+            </div>
+            <div class="col-lg-6">
+                <p class="text-center"><img class="img-rounded" alt="Patricio Forno" src="/img/Patricio.png" /></p>
+                <h3 class="text-center">Patricio Forno</h3>
+                <p class="text-center"><a href="/PatricioForno.vcf" class="text-muted"><small>Download vCard</small></a></p>
+                <p>Prior to co-founding AccelerateIBD, he had the challenge to develop the international presence of Iredale Mineral Cosmetics, a leading manufacturer, marketer and distributor of branded cosmetics with multichannel distribution in the US and 29 overseas markets. Since 2011, the footprint was expanded to 50 countries and the share of international sales grew from 15% to over 30%. This included extensive work in Mexico and Brazil, across Latin America and Asia, especially Singapore and S. Korea, Pan-European pricing strategies and new brand launch in Scandinavia.</p>
+                <p>This sustained export sales growth earned the company the US <B>President's “E” Award</B> in 2016, the highest recognition for significant contribution to US exports. Patricio is a member of the District Export Council of Massachusetts (DEC), appointed under the U.S. Secretary of Commerce.</p>
+                <p>He studied Industrial Engineering at the Universidad de Chile and attended Business School at the Universidad Diego Portales, in his native Santiago. His Chilean professional life included founding a successful entrepreneurial venture selling fire prevention equipment, executive management of the country's largest wallcovering importer, distributing 15,000 products from Europe and Canada, and managing the operations and extensive supply chain of a leading wholesale and retail construction materials and equipment group.</p>
+                <p>Naturalized in the US, he has also directed the sales and operations of a home furnishings manufacturer and then ran his own financial trading enterprise for 5 years, developing proprietary data base management tools.</p>
+                <P>A lifetime motorcyclist and trained wilderness guide in Patagonia, he enjoys mountaineering and lives in Connecticut where he and his wife are avid paragliders.</P>
+                <p><a class="btn btn-default" href="/patricio.html">More about...</a></p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Who you are section -->
+<section class="success" id="who-you-are">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2>who you are</h2>
+                <hr class="star-primary">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 col-md-offset -2">
+                <p>
+                <p>You lead a smaller or mid-size company or a division in a stable, growing or maturing market, maybe in a sector needing diversification with potential across segments/categories. You need to conduct due diligence or assess potential growth.<p> 
+                <p>You are challenged by lower cost producers; you are missing the opportunity to drive growth and expansion or add incremental business. You need to defend market share or serve a lucrative customer market, but need a comprehensive understanding of what is involved.<p>
+                <p>You are feeling bound by your market, or needing to keep those past investments at full capacity. You are open to exploring and tapping demand in new growing regions. You are ready to invest internationally, knowing time is at a premium. You want to develop expertise but are ready to go deeper than off the shelf sources.<p>
+                <p>You want to add value to the enterprise and play a fuller part in the global dynamics of your industry: there are rich sources of ideas, new products and processes to be learnt from new markets.<p> 
+                <p>You want to take a measured approach to exporting. Your acquisition, joint venture, partnership, direct exporting, import replacement, consumer base migration and investment options need to be prioritized.<p>
+                <p>You want to know the ‘why’, the ‘how’ and the ‘when’ to make it happen smartly, effectively and purposefully build brand presence.</p>
+                <br/>
+                <br/>
+                <br/>
+                </p>
+            </div><!-- .col -->
+        </div><!-- .row -->
+    </div><!-- .container -->
+</section>
