--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 ---
 layout: default
-title: AccelerateIBD
+title: Patricio Forno
 ---
 
 <!-- Header -->
 <header>
     <div class="container">
         <div class="row">
-            <p style="font-size: 25px; font-weight: bold">International Business Development</p>
+            <p style="font-size: 25px; font-weight: bold">Strategic, Value Driven International Business Development</p>
             <br/>
             <br/>
-            <p> We accelerate the identification, the capture and building of a structured, scalable and manageable growth of your international potential and presence.</p>
+            <p> To develop long term view of international expansion, prioritize viable opportunities, find and support partners who respect the value of collaboration in representing your brand.</p>
             <br/>
             <br/>
-            <p> We guide the strategic consideration of why and how to best develop your international presence and the implementation of sustainable operating plans. We identify consumers in new export markets, across industry sectors.</p>
+            <p> To guide the strategic consideration of why and how to best develop your international presence and the implementation of sustainable operating plans.</p>
             <br/>
             <br/>
-            <p> We are retained and project based advisors to private equity and operating company executives. Our goal is to reduce the time and cost to generate profitable results and to enhance your enterprise value from expansion.</p>
+            <p> To generate enhanced entrprise value in a way that makes your international presence a compelling, integral part of your business.</p>
         </div
     </div><!-- .container -->
 </header>
@@ -26,38 +26,66 @@ title: AccelerateIBD
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2>WHAT WE DO</h2>
+                <h2>PATRICIO'S TASK</h2>
                 <hr class="star-primary">
             </div>
         </div>
         <div class="row">
             <div class="col-lg-6 col-md-6">
-                <h3>Scope</h3>
-                <p>Whether embarking on new overseas expansion, diversification, considering new markets or needing to restructure under-performing areas of an existing international presence, we bring expertise to reinforce your resources. We advise private equity and mentor groups from the early stages through to the restructuring of existing operations.<P>
-                <p>We guide leadership and focus your team on the fundamentals of extending your reach. We will diagnose gaps in competencies and capacity across your footprint to attain your objectives and capture growth potential.</p>
-                <p>Our aim is to assist you to move smartly within the resource allocations supported by your business and partners. We take a thorough look at the options. We look at your brand, service and product lines, the positioning, marketing and channels to understand how they need to be tailored for new markets.</p>
-                <p>We spot financial and other resource constraints and help you incorporate strategies and plans into the organization to address these.</p>
-                <p>We are accomplished in actionable market analysis, assessing market entry options, partner selection, contract agreements, establishing distribution channels, pricing and legal structures and creating support functions.<p>
-                <p>We will guide the transition to culturally adapted marketing programs and the development of an effective commercial approach.<P>
-                <p>We support strategy sessions, mentoring, market analysis and research, business plan development and active implementation across the organization.</p>
+                <h3>No title here, I left this as a placeholder just in case.</h3>
+               <br/>
+            <br/>
+            <p> To develop long term view of international expansion, prioritize viable opportunities, find and support partners who respect the value of collaboration in representing your brand.</p>
+            <br/>
+            <br/>
+            <p> To guide the strategic consideration of why and how to best develop your international presence and the implementation of sustainable operating plans.</p>
+            <br/>
+            <br/>
+            <p> To generate enhanced entrprise value in a way that makes your international presence a compelling, integral part of your business.</p>
                 </div>
-            <div class="col-lg-6 col-md-6">
-                <h3>Outcomes</h3>
-                <p>We take the long term view of international expansion: to prioritize viable opportunities, finding and supporting global partners who respect the value of collaboration in representing your brand.<P>
-                <p>We accelerate the capture of incremental volumes, margins or strategic advantage.</p>
-                <p>We transfer competency to your organization to maintain vibrant international operations and sales.</p>
-                <p>The goal is to generate enhanced enterprise value in a way that makes international presence a compelling and integral part of your business.</p>
+        </div>
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2>HOW DO I ACHIEVE THIS?</h2>
+                <hr class="star-primary">
             </div>
         </div>
-        
-        <hr />
-
-       <!-- <div class="row">
-            <div class="col-lg-12 text-center">
-                <h3>Additional service</h3>
-                <p>We also promote the entry and growth of new enterprise into the US market. We can assist in optimizing your supply chain and presenting alternatives for overseas manufacturing and licensing.</p>
+        <div class="row">
+            <div class="col-lg-6 col-md-6">
+                <h3>No title here, I left this as a placeholder just in case.</h3>
+               <br/>
+            <br/>
+            <p> Looking at the brand, service and product lines and how they are positioned and marketed to understand how they need to be tailored for new markets.</p>
+            <br/>
+            <br/>
+            <p> Doing in depth market research and analysis to identify entry opportunities, distribution channels and their operation, competitor profiles, logistics, fiscal structures, the regulatory environment, barriers to entry, marketing standards, tax and pricing models (down to retail), legal requierements and options, and consumer profiles.</p>
+            <br/>
+            <br/>
+            <p> Extensively vetting and selecting potential partners, relationship building and discovery process; being unafraid to move away from the easy or comfortable choice...or to wait for the optimal fit. Renegotiating a contract or restructuring an existing partner.</p>
+            <br/>
+            <br/>
+            <p> Making in person market visits to understand the environment, challenge assumptions, seek inspiration, asses risk and cultural differences/realities, commence in market networking and support development, verify understanding and meet industry players, and potnetial partners. Collaboration with trade associations, chambers of commerce, officials, industry and general contacts of the US and host country.</p>
+            <br/>
+            <br/>
+            <p> Guiding the transition to culturally adapted marketing programs and the development of an effective commercial approach. </p>
+            <br/>
+            <br/>
+            <p> Diligently selecting and using trade shows as part of a pro-active market penetration plan and timeline.</p>
+            <br/>
+            <br/>
+            <p> Getting compliance right and considering its broader impact and implications.</p>
+            <br/>
+            <br/>
+            <p> Planning and executing launch events.</p>
+            <br/>
+            <br/>
+            <p> Establishing comprehensive but practical reporting systems.</p>
+            <br/>
+            <br/>
+            <p> Treating the local partner/management as an extension of the Head Office team while building the relationshhip.</p>
             </div>
-        </div> -->
+        </div>
+        <hr />
     </div>
 </section>
 
