--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ title: Patricio Forno
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2>PATRICIO'S TASK</h2>
+                <h2>MY TASK</h2>
                 <hr class="star-primary">
             </div>
         </div>
@@ -94,7 +94,7 @@ title: Patricio Forno
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2>who we are</h2>
+                <h2>bio</h2>
                 <hr class="star-primary">
             </div>
         </div>
