--- a/index.html
+++ b/index.html
@@ -113,3 +113,29 @@ title: Patricio Forno
         </div>
     </div>
 </section>
+        <!-- Who you are section -->
+<section class="success" id="who-you-are">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2>who you are</h2>
+                <hr class="star-primary">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 col-md-offset -2">
+                <p>
+                <p>You lead a smaller or mid-size company or a division in a stable, growing or maturing market, maybe in a sector needing diversification with potential across segments/categories. You need to conduct due diligence or assess potential growth.<p> 
+                <p>You are challenged by lower cost producers; you are missing the opportunity to drive growth and expansion or add incremental business. You need to defend market share or serve a lucrative customer market, but need a comprehensive understanding of what is involved.<p>
+                <p>You are feeling bound by your market, or needing to keep those past investments at full capacity. You are open to exploring and tapping demand in new growing regions. You are ready to invest internationally, knowing time is at a premium. You want to develop expertise but are ready to go deeper than off the shelf sources.<p>
+                <p>You want to add value to the enterprise and play a fuller part in the global dynamics of your industry: there are rich sources of ideas, new products and processes to be learnt from new markets.<p> 
+                <p>You want to take a measured approach to exporting. Your acquisition, joint venture, partnership, direct exporting, import replacement, consumer base migration and investment options need to be prioritized.<p>
+                <p>You want to know the ‘why’, the ‘how’ and the ‘when’ to make it happen smartly, effectively and purposefully build brand presence.</p>
+                <br/>
+                <br/>
+                <br/>
+                </p>
+            </div><!-- .col -->
+        </div><!-- .row -->
+    </div><!-- .container -->
+</section>
