Update index html

--- a/index.html
+++ b/index.html
@@ -29,20 +29,15 @@ title: Patricio Forno
                 <h2>MY TASK</h2>
                 <hr class="star-primary">
             </div>
-        </div>
         <div class="row">
             <div class="col-lg-6 col-md-6">
-                <h3>No title here, I left this as a placeholder just in case.</h3>
-               <br/>
             <br/>
             <p> To develop long term view of international expansion, prioritize viable opportunities, find and support partners who respect the value of collaboration in representing your brand.</p>
             <br/>
-            <br/>
             <p> To guide the strategic consideration of why and how to best develop your international presence and the implementation of sustainable operating plans.</p>
-            <br/>
-            <br/>
+            <br/>            
             <p> To generate enhanced entrprise value in a way that makes your international presence a compelling, integral part of your business.</p>
-                </div>
+            </div>
         </div>
         <div class="row">
             <div class="col-lg-12 text-center">
@@ -51,9 +46,7 @@ title: Patricio Forno
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-6 col-md-6">
-                <h3>No title here, I left this as a placeholder just in case.</h3>
-               <br/>
+            <div class="col-lg-6 col-md-6>
             <br/>
             <p> Looking at the brand, service and product lines and how they are positioned and marketed to understand how they need to be tailored for new markets.</p>
             <br/>
@@ -103,7 +96,7 @@ title: Patricio Forno
                 <p class="text-center"><img class="img-rounded" alt="Patricio Forno" src="/img/Patricio.png" /></p>
                 <h3 class="text-center">Patricio Forno</h3>
                 <p class="text-center"><a href="/PatricioForno.vcf" class="text-muted"><small>Download vCard</small></a></p>
-                <p>Prior to co-founding AccelerateIBD, he had the challenge to develop the international presence of Iredale Mineral Cosmetics, a leading manufacturer, marketer and distributor of branded cosmetics with multichannel distribution in the US and 29 overseas markets. Since 2011, the footprint was expanded to 50 countries and the share of international sales grew from 15% to over 30%. This included extensive work in Mexico and Brazil, across Latin America and Asia, especially Singapore and S. Korea, Pan-European pricing strategies and new brand launch in Scandinavia.</p>
+                <p>Prior to co-founding AccelerateIBD, he enjoyed the challenge to develop the international presence of Iredale Mineral Cosmetics, a leading manufacturer, marketer and distributor of branded cosmetics with multichannel distribution in the US and 29 overseas markets. Since 2011, the footprint was expanded to 50 countries and the share of international sales grew from 15% to over 30%. This included extensive work in Mexico and Brazil, across Latin America and Asia, especially Singapore and S. Korea, Pan-European pricing strategies and new brand launch in Scandinavia.</p>
                 <p>This sustained export sales growth earned the company the US <B>President's “E” Award</B> in 2016, the highest recognition for significant contribution to US exports. Patricio is a member of the District Export Council of Massachusetts (DEC), appointed under the U.S. Secretary of Commerce.</p>
                 <p>He studied Industrial Engineering at the Universidad de Chile and attended Business School at the Universidad Diego Portales, in his native Santiago. His Chilean professional life included founding a successful entrepreneurial venture selling fire prevention equipment, executive management of the country's largest wallcovering importer, distributing 15,000 products from Europe and Canada, and managing the operations and extensive supply chain of a leading wholesale and retail construction materials and equipment group.</p>
                 <p>Naturalized in the US, he has also directed the sales and operations of a home furnishings manufacturer and then ran his own financial trading enterprise for 5 years, developing proprietary data base management tools.</p>
@@ -125,12 +118,7 @@ title: Patricio Forno
         <div class="row">
             <div class="col-md-12 col-md-offset -2">
                 <p>
-                <p>You lead a smaller or mid-size company or a division in a stable, growing or maturing market, maybe in a sector needing diversification with potential across segments/categories. You need to conduct due diligence or assess potential growth.<p> 
-                <p>You are challenged by lower cost producers; you are missing the opportunity to drive growth and expansion or add incremental business. You need to defend market share or serve a lucrative customer market, but need a comprehensive understanding of what is involved.<p>
-                <p>You are feeling bound by your market, or needing to keep those past investments at full capacity. You are open to exploring and tapping demand in new growing regions. You are ready to invest internationally, knowing time is at a premium. You want to develop expertise but are ready to go deeper than off the shelf sources.<p>
-                <p>You want to add value to the enterprise and play a fuller part in the global dynamics of your industry: there are rich sources of ideas, new products and processes to be learnt from new markets.<p> 
-                <p>You want to take a measured approach to exporting. Your acquisition, joint venture, partnership, direct exporting, import replacement, consumer base migration and investment options need to be prioritized.<p>
-                <p>You want to know the ‘why’, the ‘how’ and the ‘when’ to make it happen smartly, effectively and purposefully build brand presence.</p>
+                <p>Placeholder</p>
                 <br/>
                 <br/>
                 <br/>
