--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ title: Patricio Forno
                 <p>He studied Industrial Engineering at the Universidad de Chile and attended Business School at the Universidad Diego Portales, in his native Santiago. His Chilean professional life included founding a successful entrepreneurial venture selling fire prevention equipment, executive management of the country's largest wallcovering importer, distributing 15,000 products from Europe and Canada, and managing the operations and extensive supply chain of a leading wholesale and retail construction materials and equipment group.</p>
                 <p>Naturalized in the US, he has also directed the sales and operations of a home furnishings manufacturer and then ran his own financial trading enterprise for 5 years, developing proprietary data base management tools.</p>
                 <P>A lifetime motorcyclist and trained wilderness guide in Patagonia, he enjoys mountaineering and lives in Connecticut where he and his wife are avid paragliders.</P>
-                <p><a class="btn btn-default" href="/patricio.html">Patricio's resume...</a></p>
+                <p><a class="btn btn-default" href="/resume.pdf">Patricio's resume...</a></p>
             </div>
         </div>
     </div>
