--- a/index.html
+++ b/index.html
@@ -3,21 +3,6 @@ layout: default
 title: Patricio Forno
 ---
 
-<!-- Header -->
-<header>
-    <div class="container">
-        <div class="row">
-            <p style="font-size: 25px; font-weight: bold">Strategic, Value Driven International Business Development</p>
-            <br/>
-            <p> To develop long term view of international expansion, prioritize viable opportunities, find and support partners who respect the value of collaboration in representing your brand.</p>
-            <br/>
-            <p> To guide the strategic consideration of why and how to best develop your international presence and the implementation of sustainable operating plans.</p>
-            <br/>
-            <p> To generate enhanced entrprise value in a way that makes your international presence a compelling, integral part of your business.</p>
-        </div
-    </div><!-- .container -->
-</header>
-
 <!-- Portfolio Grid Section -->
 <section id="services">
     <div class="container">
@@ -35,6 +20,7 @@ title: Patricio Forno
             <br/>            
             <p> To generate enhanced entrprise value in a way that makes your international presence a compelling, integral part of your business.</p>
            </div>
+          <div/>
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2>HOW DO I ACHIEVE THIS?</h2>
