--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@ title: Patricio Forno
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2>MY TASK</h2>
+                <h2>MY TASK and how do i achieve it</h2>
                 <hr class="star-primary">
             </div>
         <div class="row">
+          <div class="col-lg-8 col-md-8>
+                      <p>My Task:</p>
+           <div>
           <div class="col-lg-6 col-md-6">
             <br/>
             <p> To develop long term view of international expansion, prioritize viable opportunities, find and support partners who respect the value of collaboration in representing your brand.</p>
