--- a/index.html
+++ b/index.html
@@ -19,16 +19,10 @@ title: Patricio Forno
             <p> To guide the strategic consideration of why and how to best develop your international presence and the implementation of sustainable operating plans.</p>
             <br/>            
             <p> To generate enhanced entrprise value in a way that makes your international presence a compelling, integral part of your business.</p>
-           </div>
-          <div/>
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2>HOW DO I ACHIEVE THIS?</h2>
-                <hr class="star-primary">
-            </div>
-        <div class="row">
-          <div class="col-lg-6 col-md-6>
-            <br/>
+             <br/>
+             <br/>
+             <br/>
+              <p> How do I achive this:<p/>
             <p> Looking at the brand, service and product lines and how they are positioned and marketed to understand how they need to be tailored for new markets.</p>
             <br/>
             <br/>
@@ -56,7 +50,7 @@ title: Patricio Forno
             <p> Establishing comprehensive but practical reporting systems.</p>
             <br/>
             <br/>
-            <p> Treating the local partner/management as an extension of the Head Office team while building the relationshhip.</p>
+            <p> Treating the local partner/management as an extension of the Head Office team while building the relationshhip.</p>          
           </div>
       </div>
     </div>
