--- a/index.html
+++ b/index.html
@@ -7,37 +7,29 @@ title: Patricio Forno
 <section id="services">
     <div class="container">
         <div class="row">
-            <div class="col-lg-10 text-center">
+            <div class="col-lg-8 text-center">
                 <h2>MY TASK and how do i achieve it</h2>
                 <hr class="star-primary">
             </div>
           <div class="col-lg-6 col-md-6">
             <br/>
-              <p> My Task:</p>
-            <p> To develop long term view of international expansion, prioritize viable opportunities, find and support partners who respect the value of collaboration in representing your brand.</p>
-            <p> To guide the strategic consideration of why and how to best develop your international presence and the implementation of sustainable operating plans.</p>
+            <ul>
+            <p> My Task:</p>
+            <li> To develop long term view of international expansion, prioritize viable opportunities, find and support partners who respect the value of collaboration in representing your brand.</li>
+            <li> To guide the strategic consideration of why and how to best develop your international presence and the implementation of sustainable operating plans.</li>
             <p> To generate enhanced entrprise value in a way that makes your international presence a compelling, integral part of your business.</p>
-             <br/>
-             <br/>
+            <br/>
+            <br/>
             <p> How do I achive this:<p/>
             <p> Looking at the brand, service and product lines and how they are positioned and marketed to understand how they need to be tailored for new markets.</p>
-            <br/>
             <p> Doing in depth market research and analysis to identify entry opportunities, distribution channels and their operation, competitor profiles, logistics, fiscal structures, the regulatory environment, barriers to entry, marketing standards, tax and pricing models (down to retail), legal requierements and options, and consumer profiles.</p>
-            <br/>
             <p> Extensively vetting and selecting potential partners, relationship building and discovery process; being unafraid to move away from the easy or comfortable choice...or to wait for the optimal fit. Renegotiating a contract or restructuring an existing partner.</p>
-            <br/>
             <p> Making in person market visits to understand the environment, challenge assumptions, seek inspiration, asses risk and cultural differences/realities, commence in market networking and support development, verify understanding and meet industry players, and potnetial partners. Collaboration with trade associations, chambers of commerce, officials, industry and general contacts of the US and host country.</p>
-            <br/>
             <p> Guiding the transition to culturally adapted marketing programs and the development of an effective commercial approach. </p>
-            <br/>
             <p> Diligently selecting and using trade shows as part of a pro-active market penetration plan and timeline.</p>
-            <br/>
             <p> Getting compliance right and considering its broader impact and implications.</p>
-            <br/>
             <p> Planning and executing launch events.</p>
-            <br/>
             <p> Establishing comprehensive but practical reporting systems.</p>
-            <br/>
             <p> Treating the local partner/management as an extension of the Head Office team while building the relationshhip.</p>          
           </div>
       </div>
