--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ title: Patricio Forno
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2>bio</h2>
+                <h2>bio/resume</h2>
                 <hr class="star-primary">
             </div>
         </div>
