--- a/tom.html
+++ b/tom.html
@@ -22,7 +22,7 @@ title: Patricio Forno
             a.navbar-brand {
                 font-size: 3em;
                 line-height: 1.5;
-                padding: 0.5em 0 0.15em 0 !important;
+                padding: 20px 0 15px 0 !important;
                 color: #fF1c00 !important;
             }
 
