--- a/tom.html
+++ b/tom.html
@@ -43,6 +43,14 @@ title: Patricio Forno
                 font-size: 1.2em;
                 text-transform: uppercase;
             }
+            
+            @media (min-width: 768px) {
+                header .container {
+                    padding-top: 20px;
+                    padding-bottom: 15px;
+                }
+            }
+
         </style>
     </head>
     <body>
